--- a/question/templates/question/t_sign_mobile.html
+++ b/question/templates/question/t_sign_mobile.html
@@ -24,43 +24,6 @@
 <script src="{% static 'common/summernote-0.8.8/lang/summernote-zh-CN.js' %}"></script>
 <script src="{% static 'common/mobile_main.js' %}"></script>
 <script>
-function setCookie(name,value,secs)
-{
-    var exp = new Date();
-    exp.setTime(exp.getTime() + secs*1000);
-    document.cookie = name + "="+ escape (value) + ";expires=" + exp.toGMTString();
-}
-function getCookie(name)
-{
-    var arr,reg=new RegExp("(^| )"+name+"=([^;]*)(;|$)");
-    if(arr=document.cookie.match(reg))
-        return (arr[2]);
-    else
-        return null;
-}
-function delCookie(name)
-{
-    var exp = new Date();
-    exp.setTime(exp.getTime() - 1);
-    var cval=getCookie(name);
-    if(cval!=null)
-        document.cookie= name + "="+cval+";expires="+exp.toGMTString();
-}
-function countDown()
-{
-    if(0==g_countdown_secs)
-    {
-        $(".SignFlow-smsInputButton").removeClass("is-counting").text("获取短信验证码");
-        delCookie("countdown");
-    }
-    else
-    {
-        g_countdown_secs-=1;
-        $("#counting-num").text(g_countdown_secs);
-        setCookie("countdown",g_countdown_secs,g_countdown_secs);
-        setTimeout("countDown()",1000);        
-    }
-}
 function checkSmsSend()
 {
     $(".SignFlow-smsInputButton").off("click");
@@ -169,7 +132,7 @@ function init()
 <div id="root">
 <div class="App" data-reactroot="">
 <div class="LoadingBar"></div>
-<main role="main" class="App-main">
+<main role="main" class="App-main" data-module="sign">
 <div class="Login" style="height: 624px;">
 <div class="SignFlowHeader"><svg viewBox="0 0 14 14" class="Icon Icon--remove" style="fill:#fff;height:14px;width:14px" width="14" height="14" aria-hidden="true"><title></title><g><path d="M8.486 7l5.208-5.207c.408-.408.405-1.072-.006-1.483-.413-.413-1.074-.413-1.482-.005L7 5.515 1.793.304C1.385-.103.72-.1.31.31-.103.724-.103 1.385.305 1.793L5.515 7l-5.21 5.207c-.407.408-.404 1.072.007 1.483.413.413 1.074.413 1.482.005L7 8.485l5.207 5.21c.408.407 1.072.404 1.483-.007.413-.413.413-1.074.005-1.482L8.485 7z"></path></g></svg><div class="SignFlowHeader-title">登录知乎</div><div class="SignFlowHeader-subTitle">发现更大的世界</div></div>
 
