--- a/question/templates/question/t_topic_mobile.html
+++ b/question/templates/question/t_topic_mobile.html
@@ -83,7 +83,7 @@ function appendTopicElement(ret)
 
 function getMoreData()
 {
-    var nums=$('.List-item.TopicFeedItem').length;
+    var nums=g_last_getmoredata_index;//$('.List-item.TopicFeedItem').length;
     var order=1;
     var start=nums;
     var end=start+STEP;
@@ -92,6 +92,7 @@ function getMoreData()
         {
             appendTopicElement(ret);
             checkSets();
+            g_last_getmoredata_index+=STEP;
         }
         setLockScrollMoreData("false");
     });
@@ -111,8 +112,10 @@ function initElement()
 }
 function initData()
 {
+    g_last_getmoredata_index=0;
     var str_main_data=$("main").attr("data-dfs-main");
 	var main_data=JSON.parse(str_main_data);
+    g_logged=main_data.g_logged;
     g_user_id=main_data.user_id;
     g_topic_id=main_data.topic_id;
     g_topic_name=main_data.topic_name;
@@ -165,7 +168,7 @@ function init()
 
 </div>
 
-<main role="main" class="App-main" data-dfs-main='{"user_id":"{{user.id}}","topic_id":"{{context_topic.id}}","topic_name":"{{context_topic.name}}","topic_avatar":"{{context_topic.avatar}}","topic_detail":"{{context_topic.detail}}","topic_follower_nums":"{{context_topic.follower_nums}}","topic_followed":"{{followed}}"}'>
+<main role="main" class="App-main" data-module="topic" data-dfs-main='{"logged":"{{logged}}","user_id":"{{user.id}}","topic_id":"{{context_topic.id}}","topic_name":"{{context_topic.name}}","topic_avatar":"{{context_topic.avatar}}","topic_detail":"{{context_topic.detail}}","topic_follower_nums":"{{context_topic.follower_nums}}","topic_followed":"{{followed}}"}'>
 <div class="Topic">
 <div class="Card">
 <div class="TopicCard">
