--- a/question/templates/question/t_misc.html
+++ b/question/templates/question/t_misc.html
@@ -20,43 +20,6 @@
 <script src="{% static 'common/main.js' %}"></script>
     
 <script>
-function setCookie(name,value,secs)
-{
-    var exp = new Date();
-    exp.setTime(exp.getTime() + secs*1000);
-    document.cookie = name + "="+ escape (value) + ";expires=" + exp.toGMTString();
-}
-function getCookie(name)
-{
-    var arr,reg=new RegExp("(^| )"+name+"=([^;]*)(;|$)");
-    if(arr=document.cookie.match(reg))
-        return (arr[2]);
-    else
-        return null;
-}
-function delCookie(name)
-{
-    var exp = new Date();
-    exp.setTime(exp.getTime() - 1);
-    var cval=getCookie(name);
-    if(cval!=null)
-        document.cookie= name + "="+cval+";expires="+exp.toGMTString();
-}
-function countDown()
-{
-    if(0==g_countdown_secs)
-    {
-        $(".SignFlow-smsInputButton").removeClass("is-counting").text("获取短信验证码");
-        delCookie("countdown");
-    }
-    else
-    {
-        g_countdown_secs-=1;
-        $("#counting-num").text(g_countdown_secs);
-        setCookie("countdown",g_countdown_secs,g_countdown_secs);
-        setTimeout("countDown()",1000);        
-    }
-}
 function checkSmsSend()
 {
     $(".SignFlow-smsInputButton").off("click");
@@ -81,7 +44,13 @@ function checkSmsSend()
                     if("fail"!=ret)
                     {
                         if("unregistered"==ret)
+                        {
                             $(".SignFlow-accountInputContainer>.SignFlowInput-errorMask").removeClass("SignFlowInput-errorMask--hidden").text("该手机号未注册，无此用户");
+                        }
+                        else
+                        {
+                            $(".StepHeader-subtitle").text("验证码已发送到您的手机上，请查看并输入");
+                        }
                     }
                 });
             }
@@ -102,7 +71,52 @@ function checkErrorMask()
         $(this).siblings(".Input-wrapper").children(".Input").val("").focus();
     });
 }
-function checkNextStep()
+function checkSecondStep()
+{
+    var result=true;
+    var value=$("input[name='password']").val();
+    var reg=/^(?=.*[A-Za-z])(?=.*\d)[A-Za-z\d]{6,18}$/;
+    var is_check=reg.test(value);
+    if(!is_check)
+    {
+        console.log("password error");
+        $(".SignFlow-password.SignFlow-password-first>.SignFlowInput>.SignFlowInput-errorMask").removeClass("SignFlowInput-errorMask--hidden").text("长度为6~18位，必须包含字母和数字");
+        result=false;
+    }
+    
+    var value_repeat=$("input[name='repeatPassword']").val();
+    var reg=/^(?=.*[A-Za-z])(?=.*\d)[A-Za-z\d]{6,18}$/;
+    var is_check=reg.test(value_repeat);
+    if(!is_check)
+    {
+        console.log("password error");
+        $(".SignFlow-password.SignFlow-password-second>.SignFlowInput>.SignFlowInput-errorMask").removeClass("SignFlowInput-errorMask--hidden").text("长度为6~18位，必须包含字母和数字");
+        result=false;
+    }
+    if (false==result)
+        return false;
+    if(value!=value_repeat)
+    {
+        console.log("password not equal");
+        $(".SignFlow-password>.SignFlowInput>.SignFlowInput-errorMask").removeClass("SignFlowInput-errorMask--hidden").text("两次密码输入不一致");
+        result=false;
+    }
+    if (false==result)
+        return false;
+    var phone_no=$("input[name='phoneNo']").val(); 
+    var veri_code=$("input[name='digits']").val();
+    $.post("/ajax/reset_pwd/",{"phone_no":phone_no,"veri_code":veri_code,"pwd":value},function(ret){
+        if("fail"!=ret)
+        {
+            if("success"==ret)
+            {
+                console.log("reset ok");
+            }
+        }
+    });
+    return false;
+}
+function checkFirstStep()
 {
     var result=true;
 
@@ -116,9 +130,9 @@ function checkNextStep()
         result=false;
     }
 
-    var ver_code=$("input[name='digits']").val();
+    var veri_code=$("input[name='digits']").val();
     var reg = /^[0-9]{6}$/;
-    var is_check=reg.test(ver_code);
+    var is_check=reg.test(veri_code);
     if(!is_check)
     {
         console.log("verification code error");
@@ -127,20 +141,27 @@ function checkNextStep()
     }
     if(false==result)
         return false;
-    $.post("/ajax/check_sms/",{"phone_no":phone_no,"type":"password_reset","ver_code":ver_code},function(ret){
+    $.post("/ajax/check_sms/",{"phone_no":phone_no,"type":"password_reset","veri_code":veri_code},function(ret){
         if("fail"!=ret)
         {
             if("unregistered"==ret)
             {
                 $(".SignFlow-accountInputContainer>.SignFlowInput-errorMask").removeClass("SignFlowInput-errorMask--hidden").text("该手机号未注册，无此用户");
             }
-            else if("ver_code_error"==ret)
+            else if("veri_code_error"==ret)
             {
                 $(".SignFlow-smsInput>.SignFlowInput-errorMask").removeClass("SignFlowInput-errorMask--hidden").text("验证码错误");
             }
-            else if("ver_code_ok"==ret)
+            else if("veri_code_ok"==ret)
             {
                 console.log("check next step ok");
+                $(".SignFlow-account").addClass("is-hide");
+                $(".SignFlow-SMSInput").addClass("is-hide");
+                $(".SignFlow-password").removeClass("is-hide");
+                $(".PasswordReset-nextStep").text("重置密码");
+                $(".StepHeader-title").text("设置新密码");
+                $(".StepHeader-subtitle").text("新密码长度为6~18位，必须包含字母和数字");
+                $(".PasswordReset-step").attr("onsubmit","return checkSecondStep()")
             }
         }
     });
@@ -149,34 +170,47 @@ function checkNextStep()
 }
 function init()
 {
-    g_step=0;
-    g_error_type=$("main").attr("data-error-type");
-    if("e_ver_code"==g_error_type)
+    g_arg=$("main").attr("data-arg");
+    if("password_reset"!=g_arg)
     {
-        $("#errorText").text("验证码错误，注册失败，请尝试返回注册页面重新注册");
-        $("#returnLink").text("返回重新注册");
-        setTimeout(function(){window.location.href="/";},10*1000);
+        var data='<div class="" style="position:relative;width:1000px;padding:0 16px;margin:100px auto;"><div class="" style="font-size:20px;font-weight:600;font-synthesis:style;color:#1a1a1a;text-align:center;padding:10px auto;"><h1 id="errorText" style="margin:20px auto;color:red;"></h1><a id="returnLink" style="color:blue;" href="/"></a></div></div>';
+        $("main").empty().append(data);
+        if("e_veri_code"==g_arg)
+        {
+            $("#errorText").text("验证码错误，注册失败，请尝试返回注册页面重新注册");
+            $("#returnLink").text("返回重新注册");
+            setTimeout(function(){window.location.href="/";},10*1000);
+        }
+        else if("e_u_p"==g_arg)
+        {
+            $("#errorText").text("用户名密码错误，登录失败，请尝试返回登录页面重新登录");
+            $("#returnLink").text("返回重新登录");
+            setTimeout(function(){window.location.href="/";},10*1000);
+        }
+        else if("e_registered"==g_arg)
+        {
+            $("#errorText").text("该手机号已被注册，请尝试找回密码或更换手机号重新注册");
+            $("#returnLink").text("返回重新注册");
+            setTimeout(function(){window.location.href="/";},10*1000);
+        }
+        else if("reset_pwd_success"==g_arg)
+        {
+            $("#errorText").text("重置密码成功");
+            $("#returnLink").text("返回重新登录");
+            setTimeout(function(){window.location.href="/";},10*1000);
+        }
     }
-    else if("e_u_p"==g_error_type)
+    else
     {
-        $("#errorText").text("用户名密码错误，登录失败，请尝试返回登录页面重新登录");
-        $("#returnLink").text("返回重新登录");
-        setTimeout(function(){window.location.href="/";},10*1000);
-    }
-    else if("e_registered"==g_error_type)
-    {
-        $("#errorText").text("该手机号已被注册，请尝试找回密码或更换手机号重新注册");
-        $("#returnLink").text("返回重新注册");
-        setTimeout(function(){window.location.href="/";},10*1000);
-    }
-    checkSmsSend();
-    checkErrorMask();
-    var secs=getCookie("countdown");
-    if(null!=secs)
-    {
-        g_countdown_secs=secs;
-        $(".SignFlow-smsInputButton").addClass("is-counting").empty().append('<span id="counting-num">59</span>秒后可重发');
-        setTimeout("countDown()",1000);
+        checkSmsSend();
+        checkErrorMask();
+        var secs=getCookie("countdown");
+        if(null!=secs)
+        {
+            g_countdown_secs=secs;
+            $(".SignFlow-smsInputButton").addClass("is-counting").empty().append('<span id="counting-num">59</span>秒后可重发');
+            setTimeout("countDown()",1000);
+        }
     }
 }
 </script>
@@ -221,53 +255,23 @@ function init()
 </header>
 </div>
 
-<main role="main" class="App-main">
-
-<!--<div class="SignFlowHomepage">
-<div class="SignFlowHomepage-content">
-<div class="Card SignContainer-content">
-<div class="SignFlowHeader" style="padding-bottom:5px"><svg viewBox="0 0 200 91" class="Icon ZhihuLogo Icon--logo" style="height:65.625px;width:140px" width="140" height="65.625" aria-hidden="true"><title></title><g><path d="M53.29 80.035l7.32.002 2.41 8.24 13.128-8.24h15.477v-67.98H53.29v67.978zm7.79-60.598h22.756v53.22h-8.73l-8.718 5.473-1.587-5.46-3.72-.012v-53.22zM46.818 43.162h-16.35c.545-8.467.687-16.12.687-22.955h15.987s.615-7.05-2.68-6.97H16.807c1.09-4.1 2.46-8.332 4.1-12.708 0 0-7.523 0-10.085 6.74-1.06 2.78-4.128 13.48-9.592 24.41 1.84-.2 7.927-.37 11.512-6.94.66-1.84.785-2.08 1.605-4.54h9.02c0 3.28-.374 20.9-.526 22.95H6.51c-3.67 0-4.863 7.38-4.863 7.38H22.14C20.765 66.11 13.385 79.24 0 89.62c6.403 1.828 12.784-.29 15.937-3.094 0 0 7.182-6.53 11.12-21.64L43.92 85.18s2.473-8.402-.388-12.496c-2.37-2.788-8.768-10.33-11.496-13.064l-4.57 3.627c1.363-4.368 2.183-8.61 2.46-12.71H49.19s-.027-7.38-2.372-7.38zm128.752-.502c6.51-8.013 14.054-18.302 14.054-18.302s-5.827-4.625-8.556-1.27c-1.874 2.548-11.51 15.063-11.51 15.063l6.012 4.51zm-46.903-18.462c-2.814-2.577-8.096.667-8.096.667s12.35 17.2 12.85 17.953l6.08-4.29s-8.02-11.752-10.83-14.33zM199.99 46.5c-6.18 0-40.908.292-40.953.292v-31.56c1.503 0 3.882-.124 7.14-.376 12.773-.753 21.914-1.25 27.427-1.504 0 0 3.817-8.496-.185-10.45-.96-.37-7.24 1.43-7.24 1.43s-51.63 5.153-72.61 5.64c.5 2.756 2.38 5.336 4.93 6.11 4.16 1.087 7.09.53 15.36.277 7.76-.5 13.65-.76 17.66-.76v31.19h-41.71s.88 6.97 7.97 7.14h33.73v22.16c0 4.364-3.498 6.87-7.65 6.6-4.4.034-8.15-.36-13.027-.566.623 1.24 1.977 4.496 6.035 6.824 3.087 1.502 5.054 2.053 8.13 2.053 9.237 0 14.27-5.4 14.027-14.16V53.93h38.235c3.026 0 2.72-7.432 2.72-7.432z" fill-rule="evenodd"></path></g></svg>
-<div class="SignFlowHeader-slogen">登录知乎，发现更大的世界</div>
-</div>
-<div class="1SignContainer-inner">
-
-<div class="1Register">
-<div>
-<div class="Register-content">
-<form novalidate="" class="SignFlow" action="" method="post" onsubmit="return checkRegisterValid()">
-{% csrf_token %}
-<div class="SignFlow-account">
-<div class="SignFlowInput SignFlow-accountInputContainer">
-<div class="SignFlow-accountInput Input-wrapper"><input type="tel" value="" name="regPhoneNo" class="Input" placeholder="手机号"></div>
-<div class="SignFlowInput-errorMask SignFlowInput-requiredErrorMask SignFlowInput-errorMask--hidden"></div>
-</div>
-</div>
-</form>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>-->
-
+<main role="main" class="App-main" data-arg="{{arg}}">
 
 <div class="Step SignContainer-content">
 <div class="Step-inner PasswordReset">
-<form novalidate="" class="PasswordReset-step" action="" method="post" onsubmit="return checkNextStep()">
+<form novalidate="" class="PasswordReset-step" action="" method="post" onsubmit="return checkFirstStep()">
 <div class="StepHeader">
 <h1 class="StepHeader-title">找回密码</h1>
-<h2 class="StepHeader-subtitle">验证码已发送至你的注册手机</h2>
+<h2 class="StepHeader-subtitle">输入手机号，点击获取验证码</h2>
 </div>
-
+<div class="StepContent">
 <div class="SignFlow-account">
 <div class="SignFlowInput SignFlow-accountInputContainer">
 <div class="SignFlow-accountInput Input-wrapper"><input type="tel" value="" name="phoneNo" class="Input" placeholder="手机号"></div>
 <div class="SignFlowInput-errorMask SignFlowInput-requiredErrorMask SignFlowInput-errorMask--hidden"></div>
 </div>
 </div>
-
-<div class="Register-SMSInput">
+<div class="SignFlow-SMSInput">
 <div class="SignFlow SignFlow-smsInputContainer">
 <div class="SignFlowInput SignFlow-smsInput">
 <div class="Input-wrapper"><input type="number" value="" name="digits" class="Input" placeholder="输入 6 位短信验证码"></div>
@@ -276,14 +280,24 @@ function init()
 <button class="Button CountingDownButton SignFlow-smsInputButton Button--plain" type="button">获取短信验证码</button>
 </div>
 </div>
-
-
-
+<div class="SignFlow-password SignFlow-password-first is-hide">
+<div class="SignFlowInput">
+<div class="Input-wrapper"><input name="password" type="password" class="Input" placeholder="新密码" value=""></div>
+<div class="SignFlowInput-errorMask SignFlow-requiredPasswordErrorMask SignFlow-passwordErrorMask SignFlowInput-requiredErrorMask SignFlowInput-errorMask--hidden">请输入密码</div>
+</div>
+</div>
+<div class="SignFlow-password SignFlow-password-second is-hide">
+<div class="SignFlowInput">
+<div class="Input-wrapper"><input name="repeatPassword" type="password" class="Input" placeholder="再次输入新密码" value=""></div>
+<div class="SignFlowInput-errorMask SignFlow-requiredPasswordErrorMask SignFlow-passwordErrorMask SignFlowInput-requiredErrorMask SignFlowInput-errorMask--hidden">请输入密码</div>
+</div>
+</div>
+</div>
 <button type="submit" class="Button PasswordReset-nextStep Button--primary Button--blue">下一步</button>
-
 </form>
 </div>
 </div>
+
 </main>
 </div>
 </div>
