--- a/question/templates/question/t_index_mobile.html
+++ b/question/templates/question/t_index_mobile.html
@@ -61,13 +61,13 @@ function appendFeedElement(ret)
                         <div class="ContentItem AnswerItem"><h2 class="ContentItem-title"><div><a target="_blank" href="/question/'+question_id+'/?ans='+answer_id+'">'+question_title+'</a></div></h2>\
                         <div class="ContentItem-meta"></div>\
                         <div class="RichContent is-collapsed RichContent--withMask">\
+                        <div class="RichContent-content" data-content-url="/question/'+question_id+'/?ans='+answer_id+'">\
                         <div class="RichContent-cover RichContent-cover--mobile">\
                         <div class="RichContent-cover-inner" data-index-img-url="'+index_img_url+'"></div>\
                         </div>\
-                        <div class="RichContent-inner RichContent-inner--collapsed">\
-                        <span class="RichText CopyrightRichText-richText less">'+removeImg(answer_content)+'</span>\
-                        <span class="RichText CopyrightRichText-richText more">'+addClassImg(answer_content,'class="origin_image"')+'</span>\
-                        <button class="Button ContentItem-more Button--plain" type="button">阅读全文<svg viewBox="0 0 10 6" class="Icon ContentItem-arrowIcon Icon--arrow" width="10" height="16" aria-hidden="true" style="height: 16px; width: 10px;"><title></title><g><path d="M8.716.217L5.002 4 1.285.218C.99-.072.514-.072.22.218c-.294.29-.294.76 0 1.052l4.25 4.512c.292.29.77.29 1.063 0L9.78 1.27c.293-.29.293-.76 0-1.052-.295-.29-.77-.29-1.063 0z"></path></g></svg></button>\
+                        <div class="RichContent-inner RichContent-inner--collapsed" style="1max-height:400px">\
+                        <span class="RichText CopyrightRichText-richText">'+removeImg(answer_content)+'</span>\
+                        </div>\
                         </div>\
                         <div class="ContentItem-actions">\
                         <span>\
@@ -76,7 +76,6 @@ function appendFeedElement(ret)
                         </span>\
                         <button class="Button ContentItem-action Button--plain Button--withIcon Button--withLabel" type="button"><span style="display: inline-flex; align-items: center;">&#8203;<svg class="Zi Zi--Comment Button-zi" fill="currentColor" viewBox="0 0 24 24" width="1.2em" height="1.2em"><path d="M10.241 19.313a.97.97 0 0 0-.77.2 7.908 7.908 0 0 1-3.772 1.482.409.409 0 0 1-.38-.637 5.825 5.825 0 0 0 1.11-2.237.605.605 0 0 0-.227-.59A7.935 7.935 0 0 1 3 11.25C3 6.7 7.03 3 12 3s9 3.7 9 8.25-4.373 9.108-10.759 8.063z" fill-rule="evenodd"></path></svg></span>评论 21</button>\
                         <button class="Button ContentItem-action Button--plain Button--withIcon Button--iconOnly" type="button"><span style="display: inline-flex; align-items: center;">&#8203;<svg class="Zi Zi--Star Button-zi" fill="currentColor" viewBox="0 0 24 24" width="1.2em" height="1.2em"><path d="M5.515 19.64l.918-5.355-3.89-3.792c-.926-.902-.639-1.784.64-1.97L8.56 7.74l2.404-4.871c.572-1.16 1.5-1.16 2.072 0L15.44 7.74l5.377.782c1.28.186 1.566 1.068.64 1.97l-3.89 3.793.918 5.354c.219 1.274-.532 1.82-1.676 1.218L12 18.33l-4.808 2.528c-1.145.602-1.896.056-1.677-1.218z" fill-rule="evenodd"></path></svg></span></button>\
-                        <button class="Button ContentItem-action ContentItem-less ContentItem-rightButton Button--plain is-hide" type="button"><span class="RichContent-collapsedText">收起</span><svg viewBox="0 0 10 6" class="Icon ContentItem-arrowIcon is-active Icon--arrow" width="10" height="16" aria-hidden="true" style="height: 16px; width: 10px;"><title></title><g><path d="M8.716.217L5.002 4 1.285.218C.99-.072.514-.072.22.218c-.294.29-.294.76 0 1.052l4.25 4.512c.292.29.77.29 1.063 0L9.78 1.27c.293-.29.293-.76 0-1.052-.295-.29-.77-.29-1.063 0z"></path></g></svg></button>\
                         </div></div></div></div></div>\
                         </div>';
             $("#topstory-items").append(data);
