--- a/question/templates/question/t_answer.html
+++ b/question/templates/question/t_answer.html
@@ -1,24 +1,55 @@
 ﻿<!DOCTYPE html>
-<html>
-<head>
-{%load static %}
-<meta http-equiv="X-UA-Compatible" content="IE=11">
-<meta charset="utf-8">
-<title>回答问题 - 大大大</title>
-<link rel="stylesheet" href="{% static 'common/bootstrap-3.3.7/css/bootstrap.css' %}">
-<link rel="stylesheet" href="{% static 'common/bootstrap-select-1.12.4/css/bootstrap-select.css' %}">
-<link rel="stylesheet" href="{% static 'common/summernote-0.8.8/summernote.css' %}">
-<link rel="stylesheet" type="text/css" href="{% static 'common/z_main.css' %}">
-<link rel="stylesheet" type="text/css" href="{% static 'common/main.css' %}">
-    
-<script src="{%static 'common/jquery.js' %}"></script>
-<script src="{% static 'common/bootstrap-3.3.7/js/bootstrap.js' %}"></script>
-<script src="{% static 'common/bootstrap-select-1.12.4/js/bootstrap-select.js' %}"></script>
-<script src="{% static 'common/bootstrap-select-1.12.4/js/i18n/defaults-zh_CN.js' %}"></script>
-<script src="{% static 'common/summernote-0.8.8/summernote.js' %}"></script>
-<script src="{% static 'common/summernote-0.8.8/lang/summernote-zh-CN.js' %}"></script>
-<script src="{% static 'common/main.js' %}"></script>
-    
+<html lang="zh" data-hairline="true" data-theme="light" data-focus-method="pointer" style="">
+{% include 'question/head.html' %}
+<body class="Entry-body">
+{% include 'question/header.html' %}
+
+<div class="Sticky--holder" style="position: relative; top: 0px; right: 0px; bottom: 0px; left: 0px; display: block; float: none; margin: 0px; height: 3px;"></div>
+
+<!--------------------main---------------------->
+<main role="main">
+
+<div class="AppHeader">
+<div class="container">
+<div class="row">
+<div class="1col-md-offset-1 col-md-8">
+
+<div class="zu-main-content">
+<div class="zu-main-content-inner">
+        <ul class="nav nav-tabs nav-justified">
+        <li class="settings-link"><a href="/answer_page/?type=recommend">为你推荐</a></li>
+        <li class="settings-link"><a href="/answer_page/?type=all">全站</a></li>
+        <li class="settings-link"><a href="/answer_page/?type=invited">邀请回答</a></li>
+        </ul>
+        {% ifequal type 'recommend' %}
+        <div class="List-header"><h5 class="List-headerText"><span>为你推荐的问题</span></h5></div>
+        {% else %}
+            {% ifequal type 'all' %}
+            <div class="List-header"><h5 class="List-headerText"><span>全站的问题</span></h5></div>
+            {% else %}
+            <div class="List-header"><h5 class="List-headerText"><span>邀请我回答的问题</span></h5></div>
+            {% endifequal %}
+        {% endifequal %}
+        <div id="answer-items"  data-type="{{type}}" data-user-name="{{user.first_name}}">
+        </div>
+</div>
+</div>
+
+</div>
+</div>
+</div>
+</div>
+
+</main>
+<!--------------------main end-------------------->
+
+<!-- ask（Modal） -->
+{% include 'question/ask_modal.html' %}
+<!-- ask（Modal） -->
+
+<!-- letter（Modal） -->
+<!-- append by js -->
+<!-- letter（Modal） -->
 <script>
 
 function appendAnswerTheRecommendElement(ret)
@@ -148,164 +179,6 @@ function init()
     checkSets();    
 }
 </script>
-</head>
-
-<body class="Entry-body">
-<header  role="banner" class="123Sticky AppHeader">
-<div class="AppHeader-inner">
-
-<div class="container">
-<div class="row">
-<div class="col-md-1">
-<a href="/" aria-label="大大大">
-<svg viewBox="0 0 200 91" class="Icon Icon--logo" width="64" height="30" aria-hidden="true" style="fill: rgb(15, 136, 235); height: 30px; width: 64px;">
-<title></title><g><path d="M53.29 80.035l7.32.002 2.41 8.24 13.128-8.24h15.477v-67.98H53.29v67.978zm7.79-60.598h22.756v53.22h-8.73l-8.718 5.473-1.587-5.46-3.72-.012v-53.22zM46.818 43.162h-16.35c.545-8.467.687-16.12.687-22.955h15.987s.615-7.05-2.68-6.97H16.807c1.09-4.1 2.46-8.332 4.1-12.708 0 0-7.523 0-10.085 6.74-1.06 2.78-4.128 13.48-9.592 24.41 1.84-.2 7.927-.37 11.512-6.94.66-1.84.785-2.08 1.605-4.54h9.02c0 3.28-.374 20.9-.526 22.95H6.51c-3.67 0-4.863 7.38-4.863 7.38H22.14C20.765 66.11 13.385 79.24 0 89.62c6.403 1.828 12.784-.29 15.937-3.094 0 0 7.182-6.53 11.12-21.64L43.92 85.18s2.473-8.402-.388-12.496c-2.37-2.788-8.768-10.33-11.496-13.064l-4.57 3.627c1.363-4.368 2.183-8.61 2.46-12.71H49.19s-.027-7.38-2.372-7.38zm128.752-.502c6.51-8.013 14.054-18.302 14.054-18.302s-5.827-4.625-8.556-1.27c-1.874 2.548-11.51 15.063-11.51 15.063l6.012 4.51zm-46.903-18.462c-2.814-2.577-8.096.667-8.096.667s12.35 17.2 12.85 17.953l6.08-4.29s-8.02-11.752-10.83-14.33zM199.99 46.5c-6.18 0-40.908.292-40.953.292v-31.56c1.503 0 3.882-.124 7.14-.376 12.773-.753 21.914-1.25 27.427-1.504 0 0 3.817-8.496-.185-10.45-.96-.37-7.24 1.43-7.24 1.43s-51.63 5.153-72.61 5.64c.5 2.756 2.38 5.336 4.93 6.11 4.16 1.087 7.09.53 15.36.277 7.76-.5 13.65-.76 17.66-.76v31.19h-41.71s.88 6.97 7.97 7.14h33.73v22.16c0 4.364-3.498 6.87-7.65 6.6-4.4.034-8.15-.36-13.027-.566.623 1.24 1.977 4.496 6.035 6.824 3.087 1.502 5.054 2.053 8.13 2.053 9.237 0 14.27-5.4 14.027-14.16V53.93h38.235c3.026 0 2.72-7.432 2.72-7.432z" fill-rule="evenodd"></path></g>
-</svg>
-</a>
-</div>
-<nav role="navigation" class="col-md-3">
-<a class="AppHeader-navItem" href="/">首页</a>
-<a class="AppHeader-navItem" href="/trade">买卖</a>
-<a class="AppHeader-navItem" href="/topic">话题</a>
-</nav>
-
-
-<div class="SearchBar col-md-6" role="search">
-<div class="SearchBar-toolWrapper">
-<form class="SearchBar-tool">
-<div>
-<div class="1Popover">
-<div class="SearchBar-input Input-wrapper Input-wrapper--grey">
-<input type="text" maxlength="120" value="" autocomplete="off" role="combobox" aria-expanded="false" aria-autocomplete="list" aria-activedescendant="AutoComplet-41236-89421--1" id="Popover-41236-42847-toggle" aria-haspopup="true" aria-owns="Popover-41236-42847-content" class="Input" placeholder="搜索你感兴趣的内容…">
-<div class="Input-after">
-<button class="Button SearchBar-searchIcon Button--primary" aria-label="搜索" type="button" data-reactid="25"><svg viewBox="0 0 16 16" class="Icon Icon--search" style="height:16px;width:16px;" width="16" height="16" aria-hidden="true" data-reactid="26"><title data-reactid="27"></title><g data-reactid="28"><path d="M12.054 10.864c.887-1.14 1.42-2.57 1.42-4.127C13.474 3.017 10.457 0 6.737 0S0 3.016 0 6.737c0 3.72 3.016 6.737 6.737 6.737 1.556 0 2.985-.533 4.127-1.42l3.103 3.104c.765.46 1.705-.37 1.19-1.19l-3.103-3.104zm-5.317.925c-2.786 0-5.053-2.267-5.053-5.053S3.95 1.684 6.737 1.684 11.79 3.95 11.79 6.737 9.522 11.79 6.736 11.79z"></path></g></svg>
-</button>
-</div>
-</div>
-</div>
-</div>
-</form>
-</div>
-<button class="1Button QuestionAskButton SearchBar-askButton 1Button--primary 1Button--green btn btn-success" type="button" data-toggle="modal" data-target="#askModal">提问</button>
-</div>
-
-
-<div class="AppHeader-userInfo col-md-2">
-<div class="1Popover PushNotifications AppHeader-notifications">
-<button class="1Button PushNotifications-icon 1Button--plain" type="button" id="NotificationPopover" data-toggle="popover" data-placement="bottom" data-trigger="manual" data-content="null" data-html="true" data-container="body">
-<svg viewBox="0 0 20 22" class="Icon Icon--news" width="20" height="20" aria-hidden="true" style="height: 20px; width: 20px;"><title></title><g><path d="M2.502 14.08C3.1 10.64 2 3 8.202 1.62 8.307.697 9.08 0 10 0s1.694.697 1.797 1.62C18 3 16.903 10.64 17.497 14.076c.106 1.102.736 1.855 1.7 2.108.527.142.868.66.793 1.206-.075.546-.542.95-1.09.943H1.1C.55 18.34.084 17.936.01 17.39c-.075-.547.266-1.064.794-1.206.963-.253 1.698-1.137 1.698-2.104zM10 22c-1.417.003-2.602-1.086-2.73-2.51-.004-.062.02-.124.063-.17.043-.045.104-.07.166-.07h5c.063 0 .124.025.167.07.044.046.067.108.063.17-.128 1.424-1.313 2.513-2.73 2.51z"></path></g>
-</svg>
-</button>
-</div>
-
-<div class="1Popover Messages AppHeader-messages">
-<button class="1Button Messages-icon 1Button--plain" id="MessagePopover" type="button" data-toggle="popover" data-placement="bottom" data-trigger="manual" data-content="null" data-html="true" data-container="body">
-<svg viewBox="0 0 20 20" class="Icon Icon--message" width="20" height="20" aria-hidden="true" style="height: 20px; width: 20px;"><title></title><g><path d="M9 0C3.394 0 0 4.13 0 8c0 1.654.522 3.763 2.014 5.566.314.292.518.82.454 1.17-.165 1.488-.842 1.905-.842 1.905-.328.332.105.67.588.582 1.112-.2 2.07-.58 3.526-1.122.4-.202.464-.147.78-.078C11.524 17.764 18 14 18 8c0-3.665-3.43-8-9-8z"></path><path d="M19.14 9.628c.758.988.86 2.01.86 3.15 0 1.195-.62 3.11-1.368 3.938-.21.23-.354.467-.308.722.12 1.073.614 1.5.614 1.5.237.24-.188.563-.537.5-.802-.145-1.494-.42-2.545-.81-.29-.146-.336-.106-.563-.057-2.043.712-4.398.476-6.083-.926 5.964-.524 8.726-3.03 9.93-8.016z"></path></g>
-</svg>
-</button>
-</div>
-
-<div class="AppHeader-profile">
-<div class="1Popover AppHeader-menu">
-<img class="Avatar AppHeader-profileAvatar" id="MenuPopover" data-er-id="{{user.id}}" data-er-avatar="{{user.userprofile.avatar}}" data-toggle="popover" data-placement="bottom" data-trigger="manual" data-content="null" data-html="true" data-container="body" width="30" height="30" src="{{user.userprofile.avatar}}" srcset="{{user.userprofile.avatar}} 2x">
-</div>
-</div>
-
-</div>
-
-</div>
-</div>
-</div>
-</header>
-
-<div class="Sticky--holder" style="position: relative; top: 0px; right: 0px; bottom: 0px; left: 0px; display: block; float: none; margin: 0px; height: 3px;"></div>
-
-        <!--------------------main---------------------->
-        <main role="main">
-      
-        <div class="AppHeader">
-        <div class="container">
-        <div class="row">
-        <div class="1col-md-offset-1 col-md-8">
-        
-        <div class="zu-main-content">
-        <div class="zu-main-content-inner">
-                <ul class="nav nav-tabs nav-justified">
-                <li class="settings-link"><a href="/answer_page/?type=recommend">为你推荐</a></li>
-                <li class="settings-link"><a href="/answer_page/?type=all">全站</a></li>
-                <li class="settings-link"><a href="/answer_page/?type=invited">邀请回答</a></li>
-                </ul>
-                {% ifequal type 'recommend' %}
-                <div class="List-header"><h5 class="List-headerText"><span>为你推荐的问题</span></h5></div>
-                {% else %}
-                    {% ifequal type 'all' %}
-                    <div class="List-header"><h5 class="List-headerText"><span>全站的问题</span></h5></div>
-                    {% else %}
-                    <div class="List-header"><h5 class="List-headerText"><span>邀请我回答的问题</span></h5></div>
-                    {% endifequal %}
-                {% endifequal %}
-                <div id="answer-items"  data-type="{{type}}" data-user-name="{{user.first_name}}">
-                </div>
-        </div>
-        </div>
-        
-        </div>
-        </div>
-        </div>
-        </div>
-        
-        </main>
-        <!--------------------main end-------------------->
-
-
-<!--- div other--->
-<!-- 提问（Modal） -->
-<div class="modal fade" id="askModal" tabindex="-1" role="dialog" aria-labelledby="askModalLabel" aria-hidden="true">
-	<div class="modal-dialog askmodal">
-        <div class="Modal-inner">
-            <h3 class="Modal-title" id="askModalLabel">写下你的问题</h3>
-            <div class="Modal-subtitle">描述精确的问题更易得到解答</div>
-                <div class="Modal-content">
-                    <div class="QuestionAsk">
-                        <form method="post" action="/question/" id="form_ask">
-                        {% csrf_token %}            
-                            <div class="QuestionAsk-section">
-                                <div class="QuestionAsk-title">
-                                        <div class="Input-wrapper Input-wrapper--spread Input-wrapper--multiline Input-wrapper--large">
-                                        <textarea required="" name="title" rows="2" autocomplete="off" role="combobox" aria-expanded="false" aria-autocomplete="list" aria-activedescendant="AutoComplet-64372-3800-0" id="Popover-64372-42711-toggle" aria-haspopup="true" aria-owns="Popover-64372-42711-content" class="Input" placeholder="问题标题"></textarea>
-                                        </div>
-                                </div>
-                            </div>
-            
-                            <div class="QuestionAsk-section">
-                                <div class="TagInput TagInput--empty">
-                                            <select id="topics_select" name="topics_selected" class="selectpicker show-menu-arrow form-control" multiple data-live-search="true" data-max-options="5" data-style="Input-wrapper Input-wrapper--spread Input-wrapper--large" title="添加话题"></select>
-                                </div>
-                            </div>
-
-                            <input id="hide_for_submit" type="hidden" name="topics" value="null123">
-                
-                            <div class="QuestionAsk-section QuestionAsk-DetailSection">问题描述（可选）:<textarea id="summernote_question" name="detail" 1rows="5" 1cols="70" 1maxlength="160"></textarea>              
-                            </div>
-                           
-                            <div class="ModalButtonGroup QuestionAsk-buttonGroup ModalButtonGroup--vertical">
-                                <button class="1Button 1Button--primary 1Button--green btn btn-success" type="submit" form="form_ask">提交问题</button>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-		</div>        
-        <button data-dismiss="modal" aria-hidden="true" class="Button Modal-closeButton Button--plain close" aria-label="关闭" type="button">
-        <svg class="Zi Zi--Close Modal-closeIcon" fill="currentColor" viewBox="0 0 24 24" width="24" height="24"><path d="M13.486 12l5.208-5.207a1.048 1.048 0 0 0-.006-1.483 1.046 1.046 0 0 0-1.482-.005L12 10.514 6.793 5.305a1.048 1.048 0 0 0-1.483.005 1.046 1.046 0 0 0-.005 1.483L10.514 12l-5.208 5.207a1.048 1.048 0 0 0 .006 1.483 1.046 1.046 0 0 0 1.482.005L12 13.486l5.207 5.208a1.048 1.048 0 0 0 1.483-.006 1.046 1.046 0 0 0 .005-1.482L13.486 12z" fill-rule="evenodd"></path></svg></button>        
-	</div>
-</div>
-<!--- div other--->
-
-<!--- div other--->
-<!-- 私信（Modal） -->
-<!-- append by js -->
-<!--- div other--->
-
 </body>
 
 </html>
