--- a/static/common/main.css
+++ b/static/common/main.css
@@ -73,7 +73,7 @@ body {
   #position: relative;*/
   padding: 3% 1% 3% 3%;
 }
-.banner{
+.1banner{
   line-height:64px;
   height: 80px;
   color: green;
@@ -309,8 +309,18 @@ form input[type=password] {
 .popover{
     max-width: 100%;
 }
-.ProfileHeader{width:1032px} /* or width=1000px;box-sizing=content-box*/
-.Profile-main{width:1032px}  /* or width=1000px;box-sizing=content-box*/
+.ProfileHeader{
+    width:1000px;
+    -webkit-box-sizing: content-box;
+    -moz-box-sizing: content-box;
+    box-sizing: content-box;
+}
+.Profile-main{
+    width:1000px;
+    -webkit-box-sizing: content-box;
+    -moz-box-sizing: content-box;
+    box-sizing: content-box;
+}
 .ProfileHeader-main {
     position: relative;
     margin: 0 20px 4px;
@@ -695,6 +705,12 @@ label {
     width: 100%;
     margin-top: 32px;
     margin-bottom: 10px;
+}
+
+*{
+    -webkit-box-sizing: content-box;
+    -moz-box-sizing: content-box;
+    box-sizing: content-box;
 }
 
 
