--- a/question/templates/question/t_misc_mobile.html
+++ b/question/templates/question/t_misc_mobile.html
@@ -1,28 +1,61 @@
 ﻿<!DOCTYPE html>
 <html lang="zh" data-hairline="true" data-android="true" data-theme="light">
-<head>
-{%load static %}
-<meta charset="utf-8">
-<title>知乎 - 发现更大的世界</title>
-<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0,viewport-fit=cover">
-<meta name="renderer" content="webkit">
-<meta name="force-rendering" content="webkit">
-<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+{% include 'question/head_mobile.html' %}
+
+<body class="Mobile-body">
+<div id="root">
+<div class="App" data-reactroot="">
+<div class="LoadingBar"></div>
 
 
-<link rel="stylesheet" href="{% static 'common/bootstrap-3.3.7/css/bootstrap.css' %}">
-<link rel="stylesheet" href="{% static 'common/bootstrap-select-1.12.4/css/bootstrap-select.css' %}">
-<link rel="stylesheet" href="{% static 'common/summernote-0.8.8/summernote.css' %}">
-<link rel="stylesheet" type="text/css" href="{% static 'common/mobile_z_main.css' %}">
-<link rel="stylesheet" type="text/css" href="{% static 'common/mobile_main.css' %}">
-    
-<script src="{%static 'common/jquery.js' %}"></script>
-<script src="{% static 'common/bootstrap-3.3.7/js/bootstrap.js' %}"></script>
-<script src="{% static 'common/bootstrap-select-1.12.4/js/bootstrap-select.js' %}"></script>
-<script src="{% static 'common/bootstrap-select-1.12.4/js/i18n/defaults-zh_CN.js' %}"></script>
-<script src="{% static 'common/summernote-0.8.8/summernote.js' %}"></script>
-<script src="{% static 'common/summernote-0.8.8/lang/summernote-zh-CN.js' %}"></script>
-<script src="{% static 'common/mobile_main.js' %}"></script>   
+<main role="main" class="App-main" data-module="misc" data-arg="{{arg}}">
+<div class="Login" style="1height: 624px;">
+
+<div class="Step 1SignContainer-content">
+<div class="Step-inner PasswordReset">
+<form novalidate="" class="PasswordReset-step" action="" method="post" onsubmit="return checkFirstStep()">
+<div class="StepHeader">
+<h1 class="StepHeader-title">找回密码</h1>
+<h2 class="StepHeader-subtitle">输入手机号，点击获取验证码</h2>
+</div>
+<div class="StepContent">
+<div class="SignFlow-account">
+<div class="SignFlowInput SignFlow-accountInputContainer">
+<div class="SignFlow-accountInput Input-wrapper"><input type="tel" value="" name="phoneNo" class="Input" placeholder="手机号"></div>
+<div class="SignFlowInput-errorMask SignFlowInput-requiredErrorMask SignFlowInput-errorMask--hidden"></div>
+</div>
+</div>
+<div class="SignFlow-SMSInput">
+<div class="SignFlow SignFlow-smsInputContainer">
+<div class="SignFlowInput SignFlow-smsInput">
+<div class="Input-wrapper"><input type="number" value="" name="digits" class="Input" placeholder="输入 6 位短信验证码"></div>
+<div class="SignFlowInput-errorMask SignFlowInput-requiredErrorMask SignFlowInput-errorMask--hidden"></div>
+</div>
+<button class="Button CountingDownButton SignFlow-smsInputButton Button--plain" type="button">获取短信验证码</button>
+</div>
+</div>
+<div class="SignFlow-password SignFlow-password-first is-hide">
+<div class="SignFlowInput">
+<div class="Input-wrapper"><input name="password" type="password" class="Input" placeholder="新密码" value=""></div>
+<div class="SignFlowInput-errorMask SignFlow-requiredPasswordErrorMask SignFlow-passwordErrorMask SignFlowInput-requiredErrorMask SignFlowInput-errorMask--hidden">请输入密码</div>
+</div>
+</div>
+<div class="SignFlow-password SignFlow-password-second is-hide">
+<div class="SignFlowInput">
+<div class="Input-wrapper"><input name="repeatPassword" type="password" class="Input" placeholder="再次输入新密码" value=""></div>
+<div class="SignFlowInput-errorMask SignFlow-requiredPasswordErrorMask SignFlow-passwordErrorMask SignFlowInput-requiredErrorMask SignFlowInput-errorMask--hidden">请输入密码</div>
+</div>
+</div>
+</div>
+<button type="submit" class="Button PasswordReset-nextStep Button--primary Button--blue">下一步</button>
+</form>
+</div>
+</div>
+
+</div>
+</main>
+</div>
+</div>
 <script>
 function checkSmsSend()
 {
@@ -220,63 +253,6 @@ function init()
     }
 }
 </script>
-</head>
-
-<body class="Mobile-body">
-<div id="root">
-<div class="App" data-reactroot="">
-<div class="LoadingBar"></div>
-
-
-<main role="main" class="App-main" data-module="misc" data-arg="{{arg}}">
-<div class="Login" style="1height: 624px;">
-
-<div class="Step 1SignContainer-content">
-<div class="Step-inner PasswordReset">
-<form novalidate="" class="PasswordReset-step" action="" method="post" onsubmit="return checkFirstStep()">
-<div class="StepHeader">
-<h1 class="StepHeader-title">找回密码</h1>
-<h2 class="StepHeader-subtitle">输入手机号，点击获取验证码</h2>
-</div>
-<div class="StepContent">
-<div class="SignFlow-account">
-<div class="SignFlowInput SignFlow-accountInputContainer">
-<div class="SignFlow-accountInput Input-wrapper"><input type="tel" value="" name="phoneNo" class="Input" placeholder="手机号"></div>
-<div class="SignFlowInput-errorMask SignFlowInput-requiredErrorMask SignFlowInput-errorMask--hidden"></div>
-</div>
-</div>
-<div class="SignFlow-SMSInput">
-<div class="SignFlow SignFlow-smsInputContainer">
-<div class="SignFlowInput SignFlow-smsInput">
-<div class="Input-wrapper"><input type="number" value="" name="digits" class="Input" placeholder="输入 6 位短信验证码"></div>
-<div class="SignFlowInput-errorMask SignFlowInput-requiredErrorMask SignFlowInput-errorMask--hidden"></div>
-</div>
-<button class="Button CountingDownButton SignFlow-smsInputButton Button--plain" type="button">获取短信验证码</button>
-</div>
-</div>
-<div class="SignFlow-password SignFlow-password-first is-hide">
-<div class="SignFlowInput">
-<div class="Input-wrapper"><input name="password" type="password" class="Input" placeholder="新密码" value=""></div>
-<div class="SignFlowInput-errorMask SignFlow-requiredPasswordErrorMask SignFlow-passwordErrorMask SignFlowInput-requiredErrorMask SignFlowInput-errorMask--hidden">请输入密码</div>
-</div>
-</div>
-<div class="SignFlow-password SignFlow-password-second is-hide">
-<div class="SignFlowInput">
-<div class="Input-wrapper"><input name="repeatPassword" type="password" class="Input" placeholder="再次输入新密码" value=""></div>
-<div class="SignFlowInput-errorMask SignFlow-requiredPasswordErrorMask SignFlow-passwordErrorMask SignFlowInput-requiredErrorMask SignFlowInput-errorMask--hidden">请输入密码</div>
-</div>
-</div>
-</div>
-<button type="submit" class="Button PasswordReset-nextStep Button--primary Button--blue">下一步</button>
-</form>
-</div>
-</div>
-
-</div>
-</main>
-</div>
-</div>
-
 </body>
 
 </html>
