--- a/question/templates/question/t_search_mobile.html
+++ b/question/templates/question/t_search_mobile.html
@@ -1,132 +1,13 @@
 ﻿<!DOCTYPE html>
-<html>
-
-<head>
-{%load static %}
-<meta charset="utf-8">
-<title>{{context_topic.name}} - 大农令</title>
-<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0,viewport-fit=cover">
-<meta name="renderer" content="webkit">
-<meta name="force-rendering" content="webkit">
-<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-
-
-<link rel="stylesheet" href="{% static 'common/bootstrap-3.3.7/css/bootstrap.css' %}">
-<link rel="stylesheet" href="{% static 'common/bootstrap-select-1.12.4/css/bootstrap-select.css' %}">
-<link rel="stylesheet" href="{% static 'common/summernote-0.8.8/summernote.css' %}">
-<link rel="stylesheet" type="text/css" href="{% static 'common/mobile_z_main.css' %}">
-<link rel="stylesheet" type="text/css" href="{% static 'common/mobile_main.css' %}">
-
-<script src="{%static 'common/jquery.js' %}"></script>
-<script src="{% static 'common/bootstrap-3.3.7/js/bootstrap.js' %}"></script>
-<script src="{% static 'common/bootstrap-select-1.12.4/js/bootstrap-select.js' %}"></script>
-<script src="{% static 'common/bootstrap-select-1.12.4/js/i18n/defaults-zh_CN.js' %}"></script>
-<script src="{% static 'common/summernote-0.8.8/summernote.js' %}"></script>
-<script src="{% static 'common/summernote-0.8.8/lang/summernote-zh-CN.js' %}"></script>
-<script src="{% static 'common/mobile_main.js' %}"></script>
-
-<script>
-function appendSearchPageElement(ret)
-{
-    for ( var i in ret)
-    {
-        var question_id=ret[i][0];
-        var question_title=ret[i][1];
-        var question_answer_nums=ret[i][2];
-        question_title=question_title.replace(g_search_keyword,"<em>"+g_search_keyword+"</em>");
-        console.log(question_title);
-        var data='<div class="List-item"><div class="ContentItem AnswerItem"><h2 class="ContentItem-title"><div><meta itemprop="url" content="/question/'+question_id+'"><a target="_blank" href="/question/'+question_id+'"><span class="Highlight">'+question_title+'</span></a></div></h2></div></div>';
-        $("#feedArea").append(data);
-    }
-}
-
-function getMoreData() {
-    if((""!=g_search_keyword)&&(""!=g_search_type))
-    {
-        var nums=g_last_getmoredata_index;//$('.List-item').length;
-        var order=1;//pub_date
-        var start=nums;
-        var end=start+STEP*2;
-        $.post('/ajax/search/'+g_search_type+'/'+order+'/'+start+'/'+end+'/',{keyword:g_search_keyword},function(ret){
-            if("fail"!=ret)
-            {
-                appendSearchPageElement(ret);  
-                checkSets();
-                g_last_getmoredata_index+=STEP*2;
-            }
-            setLockScrollMoreData("false");
-        });
-    }
-} 
-function checkSearchType()
-{
-    
-    $(".Tabs-link").off("click");
-    $(".Tabs-link").click(function(){
-        $(".Tabs-link").removeClass("is-active");
-        $(this).addClass("is-active");
-        g_search_type=$(this).attr("data-search-type");
-        $("#feedArea").empty();
-        getMoreData();
-    });
-}
-
-function initElement()
-{   
-    if(""==g_search_type)
-    {
-        g_search_type="question";
-    }
-    $(".Tabs-link").removeClass("is-active");
-    $(".Tabs-link").each(function(){
-        if($(this).attr("data-search-type")==g_search_type)
-            $(this).addClass("is-active");
-    });
-}
-function initData()
-{
-    g_last_getmoredata_index=0;
-    var str_main_data=$("main").attr("data-dfs-main");
-	var main_data=JSON.parse(str_main_data);
-    g_search_keyword=main_data.search_keyword;
-    g_search_type=main_data.search_type;
-    g_logged=main_data.logged;
-    g_user_id=main_data.user_id;
-}
-function init()
-{
-    initData();
-    initElement();
-    getMoreData();
-    checkSets();
-    checkSearchType();
-    //appendLetterModal();
-}
-</script>
-</head>
-
+<html lang="zh" data-hairline="true" data-android="true" data-theme="light">
+{% include 'question/head_mobile.html' %}
 <body class="Mobile-body">
 <div id="root">
 <div class="App">
 <div class="LoadingBar"></div>
 <div>
 
-<header class="Sticky MobileAppHeader" style="line-height: 50px;">
-<div class="MobileAppHeader-inner">
-<a class="MobileAppHeader-logo" href="/" aria-label="大农令"><svg viewBox="0 0 200 91" width="56" height="28" fill="#0f88eb"><title></title><g><path d="M53.29 80.035l7.32.002 2.41 8.24 13.128-8.24h15.477v-67.98H53.29v67.978zm7.79-60.598h22.756v53.22h-8.73l-8.718 5.473-1.587-5.46-3.72-.012v-53.22zM46.818 43.162h-16.35c.545-8.467.687-16.12.687-22.955h15.987s.615-7.05-2.68-6.97H16.807c1.09-4.1 2.46-8.332 4.1-12.708 0 0-7.523 0-10.085 6.74-1.06 2.78-4.128 13.48-9.592 24.41 1.84-.2 7.927-.37 11.512-6.94.66-1.84.785-2.08 1.605-4.54h9.02c0 3.28-.374 20.9-.526 22.95H6.51c-3.67 0-4.863 7.38-4.863 7.38H22.14C20.765 66.11 13.385 79.24 0 89.62c6.403 1.828 12.784-.29 15.937-3.094 0 0 7.182-6.53 11.12-21.64L43.92 85.18s2.473-8.402-.388-12.496c-2.37-2.788-8.768-10.33-11.496-13.064l-4.57 3.627c1.363-4.368 2.183-8.61 2.46-12.71H49.19s-.027-7.38-2.372-7.38zm128.752-.502c6.51-8.013 14.054-18.302 14.054-18.302s-5.827-4.625-8.556-1.27c-1.874 2.548-11.51 15.063-11.51 15.063l6.012 4.51zm-46.903-18.462c-2.814-2.577-8.096.667-8.096.667s12.35 17.2 12.85 17.953l6.08-4.29s-8.02-11.752-10.83-14.33zM199.99 46.5c-6.18 0-40.908.292-40.953.292v-31.56c1.503 0 3.882-.124 7.14-.376 12.773-.753 21.914-1.25 27.427-1.504 0 0 3.817-8.496-.185-10.45-.96-.37-7.24 1.43-7.24 1.43s-51.63 5.153-72.61 5.64c.5 2.756 2.38 5.336 4.93 6.11 4.16 1.087 7.09.53 15.36.277 7.76-.5 13.65-.76 17.66-.76v31.19h-41.71s.88 6.97 7.97 7.14h33.73v22.16c0 4.364-3.498 6.87-7.65 6.6-4.4.034-8.15-.36-13.027-.566.623 1.24 1.977 4.496 6.035 6.824 3.087 1.502 5.054 2.053 8.13 2.053 9.237 0 14.27-5.4 14.027-14.16V53.93h38.235c3.026 0 2.72-7.432 2.72-7.432z" fill-rule="evenodd"></path></g></svg></a>
-{% ifequal logged 'true' %}
-<div class="MobileAppHeader-actions">
-<a class="MobileAppHeader-downloadLink" href="https://www.danongling.com/app?auto_download=true&amp;utm_source=zhihu&amp;utm_campaign=guest_feed&amp;utm_content=guide">下载 App</a>
-<div class="MobileAppHeader-navItem MobileAppHeader-moreIconWrapper">
-<span class="MobileAppHeader-expandBtn"><svg class="Zi Zi--More" fill="currentColor" viewBox="0 0 24 24" width="24" height="24"><path d="M3.5 5h16a1.5 1.5 0 0 1 0 3h-16a1.5 1.5 0 0 1 0-3zm0 6h16a1.5 1.5 0 0 1 0 3h-16a1.5 1.5 0 0 1 0-3zm0 6h16a1.5 1.5 0 0 1 0 3h-16a1.5 1.5 0 0 1 0-3z" fill-rule="evenodd"></path></svg></span>
-</div>
-</div>
-{% else %}
-<div class="MobileAppHeader-actions"><a class="MobileAppHeader-downloadLink" href="https://www.danongling.com/app?auto_download=true&amp;utm_source=zhihu&amp;utm_campaign=guest_feed&amp;utm_content=guide">下载 App</a>
-<a class="MobileAppHeader-authLink" href="/signinup/?next=/">注册或登录</a></div>
-{% endifequal %}
-</div>
-</header>
+{% include 'question/header_mobile.html' %}
 
 </div>
 
@@ -224,6 +105,83 @@ function init()
         <svg class="Zi Zi--Close Modal-closeIcon" fill="currentColor" viewBox="0 0 24 24" width="24" height="24"><path d="M13.486 12l5.208-5.207a1.048 1.048 0 0 0-.006-1.483 1.046 1.046 0 0 0-1.482-.005L12 10.514 6.793 5.305a1.048 1.048 0 0 0-1.483.005 1.046 1.046 0 0 0-.005 1.483L10.514 12l-5.208 5.207a1.048 1.048 0 0 0 .006 1.483 1.046 1.046 0 0 0 1.482.005L12 13.486l5.207 5.208a1.048 1.048 0 0 0 1.483-.006 1.046 1.046 0 0 0 .005-1.482L13.486 12z" fill-rule="evenodd"></path></svg></button>        
 	</div>
 </div>
+<script>
+function appendSearchPageElement(ret)
+{
+    for ( var i in ret)
+    {
+        var question_id=ret[i][0];
+        var question_title=ret[i][1];
+        var question_answer_nums=ret[i][2];
+        question_title=question_title.replace(g_search_keyword,"<em>"+g_search_keyword+"</em>");
+        console.log(question_title);
+        var data='<div class="List-item"><div class="ContentItem AnswerItem"><h2 class="ContentItem-title"><div><meta itemprop="url" content="/question/'+question_id+'"><a target="_blank" href="/question/'+question_id+'"><span class="Highlight">'+question_title+'</span></a></div></h2></div></div>';
+        $("#feedArea").append(data);
+    }
+}
 
+function getMoreData() {
+    if((""!=g_search_keyword)&&(""!=g_search_type))
+    {
+        var nums=g_last_getmoredata_index;//$('.List-item').length;
+        var order=1;//pub_date
+        var start=nums;
+        var end=start+STEP*2;
+        $.post('/ajax/search/'+g_search_type+'/'+order+'/'+start+'/'+end+'/',{keyword:g_search_keyword},function(ret){
+            if("fail"!=ret)
+            {
+                appendSearchPageElement(ret);  
+                checkSets();
+                g_last_getmoredata_index+=STEP*2;
+            }
+            setLockScrollMoreData("false");
+        });
+    }
+} 
+function checkSearchType()
+{
+    
+    $(".Tabs-link").off("click");
+    $(".Tabs-link").click(function(){
+        $(".Tabs-link").removeClass("is-active");
+        $(this).addClass("is-active");
+        g_search_type=$(this).attr("data-search-type");
+        $("#feedArea").empty();
+        getMoreData();
+    });
+}
+
+function initElement()
+{   
+    if(""==g_search_type)
+    {
+        g_search_type="question";
+    }
+    $(".Tabs-link").removeClass("is-active");
+    $(".Tabs-link").each(function(){
+        if($(this).attr("data-search-type")==g_search_type)
+            $(this).addClass("is-active");
+    });
+}
+function initData()
+{
+    g_last_getmoredata_index=0;
+    var str_main_data=$("main").attr("data-dfs-main");
+	var main_data=JSON.parse(str_main_data);
+    g_search_keyword=main_data.search_keyword;
+    g_search_type=main_data.search_type;
+    g_logged=main_data.logged;
+    g_user_id=main_data.user_id;
+}
+function init()
+{
+    initData();
+    initElement();
+    getMoreData();
+    checkSets();
+    checkSearchType();
+    //appendLetterModal();
+}
+</script>
 </body>
 </html>
